fixed dark mode leaderboard

--- a/src/pages/Leaderboard/Leaderboard.css
+++ b/src/pages/Leaderboard/Leaderboard.css
@@ -15,6 +15,10 @@
     background-color: #ffffff;
   }
 
+  .leaderboard-container {
+    color: black;
+  }
+
 
   
 
